# listeningway

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  STABILITY.md  build.bat  deploy.bat  vcpkg.json
assets/: ListeningwayUniforms.fxh  listeningway.rc
docs/: openrgb.md  osc.md  phase2_implementation_summary.md  streamlined_audio_analysis_replacement_proposal.md
docs/adr/: 0001-clean-room-v2-engine.md  0002-pipeline-architecture.md  0003-adapter-usage-policy.md  0004-configuration-strategy.md  0005-uniform-contract.md  0006-testing-strategy.md  0007-v1-scope.md  0008-language-and-dependencies.md  0009-process-audio-source.md  0010-network-outputs.md  0011-osc-output.md  0012-openrgb-output.md  0014-openrgb-pattern-matrix.md  README.md  research-notes-beat.md  research-notes-process-audio.md  research-notes.md
docs/template/: release.md
samples/: integration_harness.py  osc_receiver.py
src/: app.cpp  app.h  listeningway_addon.cpp  listeningway_constants.h
src.harvest/audio/: README.md  audio_pipeline.cpp  audio_pipeline.h
src.harvest/audio/analysis/: audio_analysis.h  beat_profiles.cpp  ring_buffer.h  tempo_worker.cpp  tempo_worker.h
src.harvest/audio/beat_detection/: beat_detector.cpp  beat_detector_simple_energy.h
src.harvest/audio/capture/: audio_capture.cpp  audio_capture.h  audio_capture_manager.cpp  audio_capture_manager.h
src.harvest/audio/capture/providers/: audio_capture_provider_off.h  audio_capture_provider_system.cpp  audio_capture_provider_system.h
src.harvest/configuration/: Configuration.cpp  configuration_manager.cpp  configuration_manager.h
src.harvest/core/: README.md  audio_format_utils.h  beat_settings_panel.cpp  constants.h  listeningway_addon.cpp  overlay.h  settings.cpp  uniform_manager.cpp
src.harvest/utils/: README.md  debug_notes.h  logging.h
src/audio/analysis/: audio_analysis.cpp  audio_analysis.h  beat_profiles.h  channel_layout.h  fft_engine.cpp  fft_engine.h
src/audio/beat_detection/: beat_detector.h  beat_detector_simple_energy.cpp  beat_detector_spectral_flux_auto.cpp  beat_detector_spectral_flux_auto.h
src/audio/capture/: audio_capture.cpp  audio_capture_manager.cpp
src/audio/capture/providers/: audio_capture_provider.h  audio_capture_provider_off.cpp  audio_capture_provider_system.cpp
src/audio/dsp/: analysis_frame.h  i_dsp_stage.h  pipeline.cpp  pipeline.h  stage_profile.h
src/audio/dsp/beat/: odf_csd.cpp  odf_csd.h
src/audio/dsp/stages/: band_norm_stage.h  bands_stage.cpp  bands_stage.h  beat_stage.cpp  beat_stage.h  chronotensity_stage.h  directional_stage.h  equalizer_stage.h  fft_stage.cpp  fft_stage.h  flux_stage.h  log_boost_stage.h  loudness_stage.h  pan_stage.h  spectral_centroid_stage.h  volume_stage.h
src/audio/pipeline/: audio_system.cpp  audio_system.h
src/audio/ring/: frame_ring.h
src/audio/snapshot/: audio_snapshot.h  seqlock_snapshot.h
src/audio/source/: i_audio_source.h  off_source.h  process_audio_source.cpp  process_audio_source.h  source_format.h  wasapi_loopback_source.cpp  wasapi_loopback_source.h
src/boot/: scheduler.cpp  scheduler.h
src/config/: setting.h  settings.h  settings_json.h  store.cpp  store.h
src/configuration/: Configuration.cpp  Configuration.h  README.md  configuration_manager.cpp
src/core/: beat_settings_panel.h  constants.h  listeningway_addon.cpp  overlay.cpp  settings.h  thread_safety_manager.cpp  thread_safety_manager.h  uniform_manager.cpp  uniform_manager.h
src/output/: consumer_registry.cpp  consumer_registry.h  i_output_consumer.h  openrgb_consumer.cpp  openrgb_consumer.h  osc_consumer.cpp  osc_consumer.h  shader_contract.h  uniform_publisher.cpp  uniform_publisher.h  uniform_publisher_consumer.cpp  uniform_publisher_consumer.h
src/output/openrgb_patterns/: linear_patterns.cpp  linear_patterns.h
src/overlay/: overlay.cpp  overlay.h  overlay_consumer.cpp  overlay_consumer.h
src/util/: log.cpp  log.h
src/utils/: debug_notes.cpp  logging.cpp
templates/: ListeningwayUniforms.fxh.template
tests/: CMakeLists.txt  test_beat_profiles.cpp  test_configuration.cpp
tests.harvest/: test_audio_format_utils.cpp  test_channel_layout.cpp  test_stubs.cpp
